# choiceiq-ai-decision-resolver

./: README.md  main.py  pyproject.toml  report.docx  requirements.txt
agents/: conflict_agent.py  context_agent.py  decision_matrix_agent.py  evidence_agent.py  evidence_summarizer.py  explanation_agent.py  llm_agent.py  scoring_agent.py
config/: models.py  settings.py
graph/: workflow.py
rag/: chunker.py  document_loader.py  embeddings.py  retriever.py  vector_store.py
services/: decision_service.py  llm_service.py
state/: state.py
ui/: streamlit_app.py
utils/: history.py
